<resources>
    <string name="app_name">Bauhaus Map</string>
    <string name="launch_view_name">LaunchScreen</string>
    <string name="launch_text_view">BAUHAUS MAP</string>
    <string name="launch_footer_text_view">AN ARCHITECTURAL GUIDE</string>
    <string name="show_places">Show places</string>
    <string name="Open_in_Google_Maps">Open in Google Maps</string>


    <string name="Stuttgart">Stuttgart</string>
    <string name="first_city_desc">Feiert das Bauhaus sein 100-jähriges Gründungsjubiläum.
        Die Region Stuttgart hat große architektonische und kulturelle Highlights des Neuen Bauens,
        der Moderne und Avantgarde zu bieten</string>

    <string name="Hanover">Hanover</string>
    <string name="second_city_desc">Ein „Original“ der berühmten Architekten konnte sich in der
        schon immer eher traditionsverbundenen Stadt an der Isar zwar nicht etablieren.
        Dennoch sind auch hier deren Spuren eindeutig erkennbar.
        Ein schönes Beispiel hierfür, um nur eines zu nennen, ist das Haus der Architektur –
        obendrein passenderweise Sitz der Bayerischen Architektenkammer.</string>

    <string name="Frankfurt">Frankfurt am Main</string>

<!--places in stuttgart-->
    <string name="first_place_stuttgart">Kultur- &amp; Kongresszentrum Liederhalle</string>
    <string name="first_place_address_stuttgart">Berliner Platz 1–3 70174</string>

    <string name="second_place_stuttgart">Le Corbusier House at Weissenhof</string>
    <string name="second_place_address_stuttgart">Rathenaustrasse Platz 1–3 70191</string>

    <!--places in hanover-->
    <string name="first_place_hanover">Anzeiger High-Rise</string>
    <string name="second_place_hanover">Municipal Library</string>


</resources>
