<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".activities.CityDetailsActivity"
    android:id="@+id/city_details_activity">

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="406dp"
        android:layout_height="67dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/header_image"/>

    <ImageView
        android:id="@+id/city_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/header_image"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/city_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_image"
        android:layout_alignLeft="@id/header_image"
        android:layout_alignRight="@id/header_image"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/show_places_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:text="@string/show_places"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/first_place_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_places_button"
        android:text="@string/first_place_stuttgart"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/second_place_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_place_button"
        android:text="@string/second_place_stuttgart"
        android:textSize="20sp"/>

</RelativeLayout>

